--- a/SchoolBusWXWeb/Views/SchoolBus/GoCardInfo.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/GoCardInfo.cshtml
@@ -57,7 +57,7 @@
             </div>
             <div class="input" id="dateSelect">
                 <span style="width: 30%">出生年月</span>
-                <input type="text" asp-for="fbirthdate" value="@(Model?.fbirthdate.ToString("yyyy-MM-dd"))" readonly="readonly" />
+                <input type="text" asp-for="fbirthdate" value="@(Model?.fbirthdate.ToString(" yyyy-MM-dd"))" readonly="readonly" />
             </div>
         </div>
         <button type="submit" class=" btn mui-btn mui-btn-warning">保存信息</button>
@@ -65,71 +65,73 @@
 </div>
 
 @section Scripts{
-    <script>
-        var schoolList = [];
-        $(document).ready(function () {
+<script>
+    var schoolList = [];
+    $(document).ready(function () {
+        getSchoolList($("#fplatenumber").val());
+        // 选择出生日期
+        $("#dateSelect").click(function () {
+            var dtPicker = new mui.DtPicker({
+                type: 'date',
+                beginDate: new Date(1999, 01, 01),  // 设置开始日期
+                endDate: new Date()                 // 设置结束日期
+            });
+            dtPicker.show(function (selectItems) {
+                var y = selectItems.y.text;  //获取选择的年
+                var m = selectItems.m.text;  //获取选择的月
+                var d = selectItems.d.text;  //获取选择的日
+                var date = y + "-" + m + "-" + d;
+                $("#dateSelect").find('input').val(date);
+            });
+        });
+        // 选择学校
+        $("#dateSelect2").click(function () {
             var platenumber = $("#fplatenumber").val();
-            getSchoolList();
-            // 选择出生日期
-            $("#dateSelect").click(function () {
-                var dtPicker = new mui.DtPicker({
-                    type: 'date',
-                    beginDate: new Date(1999, 01, 01),  // 设置开始日期
-                    endDate: new Date()                 // 设置结束日期
-                });
-                dtPicker.show(function (selectItems) {
-                    var y = selectItems.y.text;  //获取选择的年
-                    var m = selectItems.m.text;  //获取选择的月
-                    var d = selectItems.d.text;  //获取选择的日
-                    var date = y + "-" + m + "-" + d;
-                    $("#dateSelect").find('input').val(date);
-                });
-            });
-            // 选择学校
-            $("#dateSelect2").click(function () {
-                var platenumber = $("#fplatenumber").val();
-                if (platenumber === '') {
-                    alert("请先填写车牌号");
-                    return;
-                }
-                setPicker();
-            });
-            function setPicker() {
-                var picker = new mui.PopPicker({ layer: 2 });
-                picker.setData(schoolList);
-                picker.pickers[0].setSelectedIndex(0);
-                picker.show(function (selectItems) {
-                    $("#fschoolname").val(selectItems[1].text);
-                });
+            if (platenumber === '') {
+                alert("请先填写车牌号");
+                return;
+            } else {
+                getSchoolList(platenumber);
             }
+            setPicker();
         });
-        // 保存信息
-        $('#frm').submit(function () {
-            if ($(this).valid()) {
-                $.ajax({
-                    url: this.action,
-                    type: this.method,
-                    data: $(this).serialize(),
-                    success: function (result) {
-                        if (result.status === 1) {
-                            alert(result.msg);
-                            //window.location.href = "/SchoolBus/GoBinding";
-                        } else {
-                            alert(result.msg);
-                        }
-                    },
-                    error: function (result) {
-                        console.log(result);
-                    },
-                    complete: function (XMLHttpRequest, textStatus) {
-
+        function setPicker() {
+            var picker = new mui.PopPicker({ layer: 2 });
+            picker.setData(schoolList);
+            picker.pickers[0].setSelectedIndex(0);
+            picker.show(function (selectItems) {
+                $("#fschoolname").val(selectItems[1].text);
+            });
+        }
+    });
+    // 保存信息
+    $('#frm').submit(function () {
+        if ($(this).valid()) {
+            $.ajax({
+                url: this.action,
+                type: this.method,
+                data: $(this).serialize(),
+                success: function (result) {
+                    if (result.status === 1) {
+                        alert(result.msg);
+                        //window.location.href = "/SchoolBus/GoBinding";
+                    } else {
+                        alert(result.msg);
                     }
-                });
-            }
-            return false;
-        });
-        // 获取学校列表并赋值
-        function getSchoolList(plater) {
+                },
+                error: function (result) {
+                    console.log(result);
+                },
+                complete: function (XMLHttpRequest, textStatus) {
+
+                }
+            });
+        }
+        return false;
+    });
+    // 获取学校列表并赋值
+    function getSchoolList(plater) {
+        if (plater != "") {
             $.ajax({
                 type: "GET",
                 url: "/SchoolBus/GetSchoolListByNum",
@@ -143,11 +145,12 @@
                 }
             });
         }
+    }
 
-        // 修改按钮
-        function modifyPhoneNum() {
-            $("#vcoded").show();
-            $("#phoneNum").attr("readonly", false);
-        }
-    </script>
+    // 修改按钮
+    function modifyPhoneNum() {
+        $("#vcoded").show();
+        $("#phoneNum").attr("readonly", false);
+    }
+</script>
 }
