--- a/SchoolBusWXWeb/Views/SchoolBus/GoCardInfo.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/GoCardInfo.cshtml
@@ -136,6 +136,7 @@
                 type: "GET",
                 url: "/SchoolBus/GetSchoolListByNum",
                 data: { platenumber: plater },
+                async: false,
                 success: function (data) {
                     if (data.status === 1) {
                         schoolList = data.data;
