--- a/SchoolBusWXWeb/Views/WeixinJSSDK/Index.cshtml
+++ b/SchoolBusWXWeb/Views/WeixinJSSDK/Index.cshtml
@@ -15,7 +15,7 @@
 <body>
     <h1>公众号JSSDK演示</h1>
     <h2>Msg：@Model.Msg</h2>
-    <h3>UserName：@Model.UserInfo.nickname</h3>
+    <h3>UserName：@Model.TokenResult.openid </h3>
     <div>
         此页面是Senparc.Weixin.MP JSSDK的演示，可以点击右上方按钮，转发到朋友圈或者朋友进行测试。<br />
         顺利的话，转发的内容可以看到自定义的标题，配有一个自定义图片。
