增加跳转页

--- a/SchoolBusWXWeb/Views/Home/Index.cshtml
+++ b/SchoolBusWXWeb/Views/Home/Index.cshtml
@@ -1,157 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-@model SchoolBusWXWeb.Models.ViewData.IndexModel
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    @{
-        if (Model.code != -1)
-        {
-            switch (Model.type)
-            {
-                case 0: // 绑定
-                    switch (Model.code)
-                    {
-                        case 1:
-                            <div>跳转注册页</div>
-                            break;
-                        case 2:
-                            <div>该微信已注册绑卡并且卡已到期->关闭浏览器</div>
-                            <div>确定</div>
-                            break;
-                        case 3:
-                            <div>该微信已注册绑卡并且已成功绑定->关闭浏览器器</div>
-                            <div>确定</div>
-                            break;
-                        case 4:
-                            <div>已注册并且卡已挂失，跳转至注册页</div>
-                            break;
-                        case 5:
-                            <div>该微信已注册绑卡并且卡已注销,是否重新绑定注册？确认框</div>
-                            <div>确定</div>
-                            break;
-                    }
-                    break;
-                case 1: // 挂失
-                    switch (Model.code)
-                    {
-                        case 1:
-                            <div><a href="https://mp.weixin.qq.com/mp/homepage?__biz=MzU5Nzc3OTcxNw==&hid=1&sn=862cbb911dca00c871a342e2bcaf06cc">跳转到教育文章</a></div>
-                            break;
-                        case 2:
-                            <div>已注册并且卡已成功绑定，跳转挂失页</div>
-                            break;
-                        case 3:
-                            <div>已注册并且卡已成功绑定，跳转挂失页</div>
-                            break;
-                        case 4:
-                            // 已注册并且卡已挂失，提示挂失信息，确定信息返回公众号
-                            <div>已注册绑定卡片已挂失->关闭浏览器</div>
-                            <div>确定</div>
-                            break;
-                        case 5:
-                            // 已注册并且卡已注销，提示注销信息，确定信息返回公众号
-                            <div>已注册绑定卡片已注销，无法挂失</div>
-                            <div>确定</div>
-                            break;
-                    }
-                    break;
-                case 2:// 修改信息
-                    switch (Model.code)
-                    {
-                        case 1:
-                            <div><a href="https://mp.weixin.qq.com/mp/homepage?__biz=MzU5Nzc3OTcxNw==&hid=1&sn=862cbb911dca00c871a342e2bcaf06cc">跳转到教育文章</a></div>
-                            break;
-                        case 2:
-                            // 已注册并且卡已到期，提示已到期信息，确定信息返回公众号
-                            <div>所绑定卡已到期</div>
-                            <div>确定</div>
-                            break;
-                        case 3:
-                            // 已注册并且卡已成功绑定，跳转卡片信息修改页
-                            <div>跳转卡片信息修改页</div>
-                            break;
-                        case 4:
-                            // 已注册并且卡已挂失，提示挂失信息，确定信息返回公众号
-                            <div>已注册绑定卡片已挂失->关闭浏览器</div>
-                            <div>确定</div>
-                            break;
-                        case 5:
-                            // 已注册并且卡已注销，提示注销信息，确定信息返回公众号
-                            <div>已注册绑定卡片已注销</div>
-                            <div>确定</div>
-                            break;
-                    }
-                    break;
-                case 3: // 实时位置
-                    switch (Model.code)
-                    {
-                        case 1:
-                            <div><a href="https://mp.weixin.qq.com/mp/homepage?__biz=MzU5Nzc3OTcxNw==&hid=1&sn=862cbb911dca00c871a342e2bcaf06cc">跳转到教育文章</a></div>
-                            break;
-                        case 2:
-                            // 已注册并且卡已到期，提示已到期信息，确定信息返回公众号
-                            <div>所绑定卡已到期</div>
-                            <div>确定</div>
-                            break;
-                        case 3:
-                            // 已注册并且卡已成功绑定，跳转实时位置查看页
-                            <div>跳转实时位置查看页</div>
-                            break;
-                        case 4:
-                            // 已注册并且卡已挂失，提示挂失信息，确定信息返回公众号
-                            <div>已注册绑定卡片已挂失->关闭浏览器</div>
-                            <div>确定</div>
-                            break;
-                        case 5:
-                            // 已注册并且卡已注销，提示注销信息，确定信息返回公众号
-                            <div>已注册绑定卡片已注销</div>
-                            <div>确定</div>
-                            break;
-                    }
-                    break;
-                case 4:// 考勤查看
-                    switch (Model.code)
-                    {
-                        case 1:
-                            <div><a href="https://mp.weixin.qq.com/mp/homepage?__biz=MzU5Nzc3OTcxNw==&hid=1&sn=862cbb911dca00c871a342e2bcaf06cc">跳转到教育文章</a></div>
-                            break;
-                        case 2:
-                            // 已注册并且卡已到期，提示已到期信息，确定信息返回公众号
-                            <div>所绑定卡已到期</div>
-                            <div>确定</div>
-                            break;
-                        case 3:
-                            // 已注册并且卡已成功绑定，跳转考勤查看页
-                            <div>跳转跳转考勤查看页</div>
-                            break;
-                        case 4:
-                            // 已注册并且卡已挂失，提示挂失信息，确定信息返回公众号
-                            <div>已注册绑定卡片已挂失->关闭浏览器</div>
-                            <div>确定</div>
-                            break;
-                        case 5:
-                            // 已注册并且卡已注销，提示注销信息，确定信息返回公众号
-                            <div>已注册绑定卡片已注销</div>
-                            <div>确定</div>
-                            break;
-                    }
-                    break;
-                case 5:// 解绑
-                    if (Model.code == 1)
-                    {
-                        <div><a href="https://mp.weixin.qq.com/mp/homepage?__biz=MzU5Nzc3OTcxNw==&hid=1&sn=862cbb911dca00c871a342e2bcaf06cc">跳转到教育文章</a></div>
-                    }
-                    else
-                    {
-                        <div>已注册并且卡已成功绑定，跳转解绑页</div>
-                    }
-                    break;
-            }
-        }
-        else
-        {
-            <div>-1 关闭wx浏览器</div>
-        }
-    }
+    <div>一起学习asp.net core</div>
 </div>
